<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    android:orientation="vertical">

    <!--标题-->
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_144px"
        android:background="@color/title_bar_bg">

        <ImageView
            android:id="@+id/iv_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/gapsize_c"
            android:src="@drawable/return_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_bet"
            android:textColor="@color/white"
            android:textSize="@dimen/typesize_b" />

        <TextView
            android:id="@+id/tv_chipped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/gapsize_c"
            android:text="@string/bet_achipped"
            android:textColor="@color/white"
            android:textSize="@dimen/typesize_c" />
    </RelativeLayout>

    <!--倒计时-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/gapsize_d"
        android:paddingRight="@dimen/gapsize_d"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/typesize_d"
            tools:text="@string/bet_countdown" />

        <com.developer.lecai.view.CountdownView
            android:id="@+id/countdownview"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/h_100px"
            android:layout_gravity="center_vertical"
            app:isShowMinute="true"
            app:isShowSecond="true"
            app:suffixDay="@string/selectnote_countdown_day"
            app:suffixGravity="center"
            app:suffixHour="@string/selectnote_countdown_hour"
            app:suffixMinute="@string/selectnote_countdown_min"
            app:suffixSecond="@string/selectnote_countdown_sec"
            app:suffixTextSize="@dimen/h_36px"
            app:timeTextColor="@color/red"
            app:timeTextSize="@dimen/h_36px" />
    </LinearLayout>


    <!--手选号码、随机一注、清除列表-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gapsize_c"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_picknum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gapsize_b"
            android:layout_weight="1"
            android:background="@drawable/touzhuconfirm_bg"
            android:drawablePadding="@dimen/gapsize_g"
            android:drawableStart="@drawable/touzhu_sx"
            android:gravity="center"
            android:paddingBottom="@dimen/gapsize_e"
            android:paddingLeft="@dimen/gapsize_b"
            android:paddingRight="@dimen/gapsize_b"
            android:paddingTop="@dimen/gapsize_e"
            android:text="@string/bet_pickingnumber"
            android:textColor="@color/black"
            android:textSize="@dimen/typesize_d" />

        <TextView
            android:id="@+id/tv_randomnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gapsize_b"
            android:layout_weight="1"
            android:background="@drawable/touzhuconfirm_bg"
            android:drawablePadding="@dimen/gapsize_g"
            android:drawableStart="@drawable/touzhu_sj"
            android:gravity="center"
            android:paddingBottom="@dimen/gapsize_e"
            android:paddingLeft="@dimen/gapsize_b"
            android:paddingRight="@dimen/gapsize_b"
            android:paddingTop="@dimen/gapsize_e"
            android:text="@string/bet_randomnumber"
            android:textColor="@color/black"
            android:textSize="@dimen/typesize_d" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/touzhuconfirm_bg"
            android:drawablePadding="@dimen/gapsize_g"
            android:drawableStart="@drawable/touzhu_qk"
            android:gravity="center"
            android:paddingBottom="@dimen/gapsize_e"
            android:paddingLeft="@dimen/gapsize_b"
            android:paddingRight="@dimen/gapsize_b"
            android:paddingTop="@dimen/gapsize_e"
            android:text="@string/bet_emptylist"
            android:textColor="@color/black"
            android:textSize="@dimen/typesize_d" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bet_gap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/gapsize_a"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_lottery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/bet_sawtooth" />

    </LinearLayout>


    <!--合计、投注详情、计划倍投、投注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/gapsize_d">

            <TextView
                android:id="@+id/tv_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/title_bar_bg"
                android:textSize="@dimen/typesize_d"
                tools:text="@string/bet_summation" />

            <TextView
                android:id="@+id/tv_bet_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_sum"
                android:layout_marginTop="@dimen/gapsize_g"
                android:textColor="@color/gray_normal"
                android:textSize="@dimen/typesize_e"
                tools:text="@string/bet_notes_nper_multiple" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_planmultiple"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/statelan_bg"
            android:gravity="center"
            android:padding="@dimen/gapsize_b"
            android:text="@string/bet_plan_multiple"
            android:textColor="@color/white"
            android:textSize="@dimen/typesize_c" />

        <TextView
            android:id="@+id/tv_betstart"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/title_bar_bg"
            android:gravity="center"
            android:padding="@dimen/gapsize_b"
            android:text="@string/bet_start"
            android:textColor="@color/white"
            android:textSize="@dimen/typesize_c" />
    </LinearLayout>
</LinearLayout>